--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -51,13 +51,14 @@
 	          <li class="nav-item active"><a href="{{path('home')}}" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="{{path('formation_index')}}" class="nav-link">Formations</a></li>
 	          <li class="nav-item"><a href="{{path('evenement_index')}}" class="nav-link">Évènements</a></li>
-	          <li class="nav-item"><a href="{{path('contact')}}" class="nav-link">Contact</a></li>
+				<li class="nav-item"><a href="{{path('reclamation_index')}}" class="nav-link">Reclamation</a></li>
+				<li class="nav-item"><a href="{{path('contact')}}" class="nav-link">Contact</a></li>
 
 
 	          <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="room.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shop</a>
               <div class="dropdown-menu" aria-labelledby="dropdown04">
-              	<a class="dropdown-item" href="{{path('boutique')}}">Boutique</a>
+              	<a class="dropdown-item" href="{{path('alpha')}}">Boutique</a>
                 <a class="dropdown-item" href="product-single.html">Single Product</a>
                 <a class="dropdown-item" href="room.html">Cart</a>
                 <a class="dropdown-item" href="checkout.html">Checkout</a>
@@ -100,7 +101,18 @@
 	      </div>
 		  </div>
 	  </nav>
-
+	{% block form %}
+	<form class="d-none d-sm-inline-block">
+		{% endblock %}
+		<div class="input-group input-group-navbar">
+			{% block chercher %}
+				<input type="text" class="form-control" placeholder="Search reclamation" aria-label="Search">
+			{% endblock %}
+			<button class="btn" type="button">
+				<i class="align-middle" data-feather="search"></i>
+			</button>
+		</div>
+	</form>
     <!-- END nav -->
 {% block content %}
     <section class="home-slider owl-carousel">
