--- a/templates/formation/_form.html.twig
+++ b/templates/formation/_form.html.twig
@@ -3,6 +3,5 @@
 
 {{ form_start(form) }}
     {{ form_widget(form) }}
-    <button class="btn btn-outline-dark">{{ button_label|default('Save') }}</button>
-<!--button type="button" class="btn btn-outline-dark">{{ button_label|default('Save') }}</button-->
+    <button class="btn btn-outline-dark">{{ button_label|default('Enregistrer') }}</button>
 {{ form_end(form) }}
