--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -75,6 +75,7 @@
         <h2 class="mb-4">Les Formations</h2>
     </div>
     <div>
+        <a href="{{ path('formation_sorted') }}"> Affichage par Ordre Alphabétique</a>
         <a style="margin-left: 1230px" href="{{ path('formation_new') }}">Ajouter Une Nouvelle Formation</a>
     <table class="table">
         <thead>
