--- a/templates/evenement/index.html.twig
+++ b/templates/evenement/index.html.twig
@@ -2,11 +2,16 @@
 
 
 
-{% block content  %}
-{% block title %}Evenement index{% endblock %}
+{% block content%}
+
+{% block title %}{% endblock %}
 
 {% block body %}
-    <h1>Evenement index</h1>
+<br>
+<br>
+<br>
+<br>
+    <h1>Evenements</h1>
 
     <table class="table">
         <thead>
@@ -27,7 +32,6 @@
 
                     <a href="{{ path('evenement_show', {'id': evenement.id}) }}">show</a>
                     <a href="{{ path('evenement_edit', {'id': evenement.id}) }}">edit</a>
-                <a href="{{ path('reservation_new', {'id': evenement.id}) }}">reserver</a>
                 </td>
             </tr>
           
@@ -38,9 +42,9 @@
         
         {% endfor %}
          <tr>
-            <td><a href="{{ path('evenement_new') }}">Create new</a> 
-  
-          <td> </td>
+            <td><a href="{{ path('evenement_new') }}">Create new</a> </td>
+            <td><a href="{{ path('reservation_new') }}">reserver</a></td>
+           </td>
           <td>{{ knp_pagination_render(evenements) }}</td>
             
             </tr>
