--- a/templates/evenement/new.html.twig
+++ b/templates/evenement/new.html.twig
@@ -1,4 +1,5 @@
 {% extends 'base.html.twig' %}
+{% block content%}
 
 {% block title %}New Evenement{% endblock %}
 
@@ -9,4 +10,5 @@
 
     <a href="{{ path('evenement_index') }}">back to list</a>
     
+{% endblock %}
 {% endblock %}
