--- a/templates/formation/edit.html.twig
+++ b/templates/formation/edit.html.twig
@@ -72,7 +72,7 @@
 
     <a href="{{ path('formation_index') }}">back to list</a>
 
-    {{ include('formation/_delete_form.html.twig') }}
+    {# {{ include('formation/_delete_form.html.twig') }} #}
 
 <footer class="ftco-footer ftco-section img">
     <div class="overlay"></div>
