--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -93,6 +93,8 @@
                 <td>
                     <button class="btn btn-outline-dark" > <a href="{{ path('formation_show', {'id': formation.id}) }}">Voir Plus</a> </button>
                     <button class="btn btn-outline-dark" >   <a href="{{ path('formation_edit', {'id': formation.id}) }}">Modifier</a> </button>
+
+                    {{ include('formation/_delete_form.html.twig') }}
                 </td>
             </tr>
         {% else %}
