--- a/templates/commande/edit.html.twig
+++ b/templates/commande/edit.html.twig
@@ -1,15 +1,28 @@
 
 {% extends 'base.html.twig' %}
 {% block content  %}
-    {% block title %}Edit Commande{% endblock %}
+  
 
     {% block body %}
+    <br>
+    <br>
+    <br>
+    <br>
+    <center>
         <h1>Edit Commande</h1>
-
+<table>
+<tbody>
+<tr>
         {{ include('commande/_form.html.twig', {'button_label': 'Update'}) }}
-
-        <a href="{{ path('commande_index') }}">back to list</a>
+</tr>
+&emsp;
+      <tr> 
 
         {{ include('commande/_delete_form.html.twig') }}
+        </tr>
+        </tbody>
+        </table>
+         </center>
+          <a href="{{ path('commande_index') }}">back to list</a>
     {% endblock %}
 {% endblock %}
