--- a/templates/commande/new.html.twig
+++ b/templates/commande/new.html.twig
@@ -1,12 +1,21 @@
 {% extends 'base.html.twig' %}
 {% block content  %}
-    {% block title %}New Commande{% endblock %}
+   
 
     {% block body %}
+    <br>
+    <br>
+    <br>
+    <br>
+
+    <br>
+    <center>
+
         <h1>Create new Commande</h1>
 
         {{ include('commande/_form.html.twig') }}
 
-        <a href="{{ path('commande_index') }}">back to list</a>
+        <a href="{{ path('commande_index') }}" class="btn btn-default">back to list</a>
+        </center>
     {% endblock %}
 {% endblock %}
