--- a/templates/ligne_de_commande/index.html.twig
+++ b/templates/ligne_de_commande/index.html.twig
@@ -2,16 +2,87 @@
 
 {% block title %} LigneDeCommande {% endblock %}
 
-{% block body %}
-    <h1>Lignedecommande index</h1>
+{% block content %}
+<br>
+<br>
+<br>
+<br>
+<br>
+<center>
+    <h1>Ligne de commande</h1>
+ <div class="container">
+<br><br>
+<br>
+            <h4>Search NOW !!</h4>
 
+            <div class="sidebar-search">
+
+                <div class="input-group custom-search-form">
+
+                    <input type="text" id="search" class="form-control" placeholder="Search here">
+                </div>
+                <!-- /input-group -->
+            </div>
+            <ul class="nav" id="side-menu">
+                <li>
+                    <a href="#"> <span class="fa arrow"></span></a>
+                    <ul class="nav nav-second-level" id="entitiesNav">
+                    </ul>
+                </li>
+            </ul><br><br><br><br>
+
+            <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+            <script type="text/javascript">
+                jQuery(document).ready(function() {
+                    var searchRequest = null;
+                    $("#search").keyup(function() {
+                        var minlength = 1;
+                        var that = this;
+                        var value = $(this).val();
+                        var entitySelector = $("#entitiesNav").html('');
+                        if (value.length >= minlength ) {
+                            if (searchRequest != null)
+                                searchRequest.abort();
+                            searchRequest = $.ajax({
+                                type: "GET",
+                                url: "{{ path('ajax_commande') }}",
+                                data: {
+                                    'q' : value
+                                },
+                                dataType: "text",
+                                success: function(msg){
+                                    //we need to check if the value is the same
+                                    if (value===$(that).val()) {
+                                        var result = JSON.parse(msg);
+                                        $.each(result, function(key, arr) {
+                                            $.each(arr, function(id, value) {
+                                                if (key === 'lignedecommandes') {
+                                                    if (id !== 'error') {
+                                                       entitySelector.append('<li><b>'+value[1]+'</b><a href="/produit/showrech/'+id+'"><img src="/assets/img/'+value[0]+'" style="width: 60px; height: 60px"/></a></li>');
+                                                    } else {
+                                                        entitySelector.append('<li class="errorLi">'+value+'</li>');
+                                                    }
+                                                }
+                                            });
+                                        });
+                                    }
+                                }
+                            });
+                        }
+                    });
+                });
+            </script>
     <table class="table">
         <thead>
         <tr>
             <th>Numc</th>
             <th>Prix</th>
             <th>Qte</th>
-            <th>actions</th>
+          <th>Ligne</th>
+
+            <th>Actions</th>
+
         </tr>
         </thead>
         <tbody>
@@ -20,9 +91,11 @@
                 <td>{{ lignedecommande.Numcommande }}</td>
                 <td>{{ lignedecommande.prix }}</td>
                 <td>{{ lignedecommande.qte }}</td>
+                <td>{{ lignedecommande.ligne }}</td>
+
                 <td>
-                    <a href="{{ path('lignedecommande_show', {'id': lignedecommande.id}) }}">show</a>
-                    <a href="{{ path('lignedecommande_edit', {'id': lignedecommande.id}) }}">edit</a>
+                    <a href="{{ path('lignedecommande_show', {'id': lignedecommande.id}) }} " class="btn btn-danger">show</a>
+                    <a href="{{ path('lignedecommande_edit', {'id': lignedecommande.id}) }}"class="btn btn-success">edit</a>
                 </td>
             </tr>
         {% else %}
@@ -32,6 +105,8 @@
         {% endfor %}
         </tbody>
     </table>
+     <a href="{{ path('lignedecommande_new') }}" class="btn btn-danger">Create new</a>
+    </center
 
-    <a href="{{ path('lignedecommande_new') }}">Create new</a>
+   
 {% endblock %}
