--- a/templates/ligne_de_commande/show.html.twig
+++ b/templates/ligne_de_commande/show.html.twig
@@ -2,7 +2,11 @@
 
 {% block title %} LigneDeCommande {% endblock %}
 
-{% block body %}
+{% block content %}
+<br>
+<br>
+<br>
+<center>
     <h1>Ligne de commande</h1>
 
     <table class="table">
@@ -31,5 +35,6 @@
 
     <a href="{{ path('lignedecommande_edit', {'id': lignedecommande.id}) }}">edit</a>
 
-    {{ include('lignedecommande/_delete_form.html.twig') }}
+    {{ include('ligne_de_commande/_delete_form.html.twig') }}
+    <center>
 {% endblock %}
